force-app/main/default/objects/Touchpoint__c/Touchpoint__c.object-meta.xml
<CustomObject>
    <description>Individual touchpoint within a customer journey. Contains channel-specific interaction data and attribution scores for all models.</description>
    <label>Touchpoint</label>
    <nameField>
        <displayFormat>TP-{00000000}</displayFormat>
        <label>Touchpoint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Touchpoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>