force-app/main/default/objects/Touchpoint__c/fields/Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey__c</fullName>
    <description>Master-detail relationship to the customer journey this touchpoint belongs to</description>
    <inlineHelpText>The customer journey that contains this touchpoint. Required for all touchpoints.</inlineHelpText>
    <label>Customer Journey</label>
    <referenceTo>Customer_Journey__c</referenceTo>
    <relationshipLabel>Touchpoints</relationshipLabel>
    <relationshipName>Touchpoints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>