force-app/main/default/objects/Touchpoint__c/fields/Touchpoint_ID__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_ID__c</fullName>
    <description>External ID from data generators for unique touchpoint identification</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier from the original data source. Used for data integration and preventing duplicates.</inlineHelpText>
    <label>Touchpoint ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>