force-app/main/default/objects/Touchpoint__c/fields/Touchpoint_Order__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Order__c</fullName>
    <description>Sequential order of the touchpoint within the customer journey (1, 2, 3, etc.)</description>
    <inlineHelpText>The chronological position of this touchpoint in the customer journey. Lower numbers occur earlier in the journey.</inlineHelpText>
    <label>Touchpoint Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>