force-app/main/default/objects/Touchpoint__c/fields/Touchpoint_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Timestamp__c</fullName>
    <description>Date and time when the customer interaction occurred</description>
    <inlineHelpText>Exact timestamp of when this touchpoint interaction took place.</inlineHelpText>
    <label>Touchpoint Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>